# tim

./: .gitignore  LICENSE.md  README.md  pyproject.toml
tim/: data.py  helpers.py  main.py
