[project]
name = "tim"
version = "0.2.1"
description = ""
authors = [
    {name = "Conor Eager", email = "hello@odin-tech.co.nz"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
]

[tool.poetry.scripts]
tim = "tim.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
